# tempo

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/tempo/: __init__.py  cli.py  menubar.py  notify.py  stats.py  store.py  timer.py  ui.py
tests/: test_cli.py  test_notify.py  test_stats.py  test_store.py  test_timer.py
