[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tempo"
dynamic = ["version"]
description = "pretty pomodoro timer for the terminal. sessions, tags, weekly stats."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "farkhad", email = "bennett@frkhd.com" }]
keywords = ["pomodoro", "cli", "tui", "productivity", "timer", "focus"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
]

[project.urls]
Homepage = "https://github.com/f4rkh4d/tempo"
Issues = "https://github.com/f4rkh4d/tempo/issues"
Source = "https://github.com/f4rkh4d/tempo"

[project.scripts]
tempo = "tempo.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.version]
path = "src/tempo/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/tempo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
